// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Color Circle component renders a circle with a background image 1`] = `
<div
  style={
    Object {
      "backgroundColor": "transparent",
      "backgroundImage": "url(https://i.dailymail.co.uk/i/pix/2016/03/18/15/324D202500000578-3498922-image-a-33_1458315465874.jpg)",
      "backgroundSize": "contain",
      "border": 0,
      "borderRadius": "100%",
      "height": "50vh",
      "margin": "auto",
      "width": "50vw",
    }
  }
/>
`;

exports[`Color Circle component renders a circle with black background color 1`] = `
<div
  style={
    Object {
      "backgroundColor": "black",
      "backgroundImage": "",
      "backgroundSize": "contain",
      "border": 0,
      "borderRadius": "100%",
      "height": "50vh",
      "margin": "auto",
      "width": "50vw",
    }
  }
/>
`;
